Avoid crash when dereferencing nullptr when getting child tree root

Bug: 885244,893396
Change-Id: I4ab6c6890af83483514edd41f1e7d2aeb38e4a4a
Reviewed-on: https://chromium-review.googlesource.com/c/1286814
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600428}
Former-commit-id: f253ae8c75d9235ccabb910c684698b578e58007